# regime-portfolio

./: .gitignore  README.md  pyproject.toml
config/: allocation.yaml  backtest.yaml  data.yaml  detection.yaml
data/processed/: .gitkeep  data_dictionary.md  features.parquet  prices.parquet  regimes.parquet  regimes_changepoint.parquet  regimes_hmm.parquet  regimes_jump.parquet  weights_cvarfloor.parquet  weights_defcrisis_minvar.parquet  weights_defcrisis_rp.parquet  weights_regime_changepoint.parquet  weights_regime_hmm.parquet  weights_regime_jump.parquet  weights_static_equal_weight.parquet  weights_static_hrp.parquet  weights_static_mean_variance.parquet  weights_static_min_cvar.parquet  weights_static_risk_parity.parquet
notebooks/: 01_data_exploration.ipynb
reports/: .gitkeep  detection_report.md  qa_report.md
reports/allocation/: report_regime_changepoint.md  report_regime_hmm.md  report_regime_jump.md  report_static_equal_weight.md  report_static_hrp.md  report_static_mean_variance.md  report_static_min_cvar.md  report_static_risk_parity.md
reports/backtest/: report.md
reports/detection/: comparison.md  report_changepoint.md  report_hmm.md  report_jump.md
scripts/: build_dataset.py  run_allocation.py  run_backtest.py  run_detection.py
src/regime/: __init__.py  config.py
src/regime/allocation/: __init__.py  base.py  config.py  cvar.py  equal_weight.py  estimators.py  hrp.py  mean_variance.py  regime_switching.py  risk_parity.py
tests/: __init__.py  conftest.py  test_alignment.py  test_allocation.py  test_backtest.py  test_causality.py  test_detection.py  test_inception.py
(+22 files in other folders)
