[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-portfolio"
version = "0.1.0"
description = "Adaptive Portfolio Allocation with Market Regime Detection - Data Pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Cian Robertson"}
]

dependencies = [
    # Data fetching
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
    "fredapi>=0.5.2",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Calendar handling
    "pandas-market-calendars>=4.3.0",

    # Configuration
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",

    # Visualization (for QA report)
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # CLI
    "click>=8.1.0",

    # Logging
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

[project.scripts]
build-dataset = "regime.data.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
